# cena

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  SymbolicForm.h  main.cpp  main.h  parser.cpp  parser.h  test.cpp
ast/: clang_visitor.cpp  clang_visitor.hpp  macro_handeler.cpp  macro_handeler.hpp  sources.cmake  visitor.cpp  visitor.hpp
ast/distance/: levenshtein.hpp  levenshtein_test.cpp  node_distance.hpp
ast/node/: assign.cpp  assign.hpp  ast.hpp  ast_test.cpp  asttype.hpp  atom.hpp  binaryop.hpp  block.hpp  break.hpp  call.hpp  case.hpp  charlit.hpp  compound.hpp  compound_test.cpp  conditional.hpp  cudakernelcall.hpp  declare.hpp  default.hpp  dereference.hpp  false.hpp  floatlit.hpp  for.hpp  function.hpp  goto.hpp  identifier.cpp  identifier.hpp  if.hpp  integerlit.hpp  keyword.hpp  label.hpp  member.hpp  node.hpp  parameter.hpp  paren.hpp  pragma.hpp  program.hpp  reference.hpp  reference_type.hpp  return.hpp  sizeof.hpp  (+13 more)
cmake/modules/: EnableCXX11.cmake  FindClang.cmake  FindLLVM.cmake  VcMacros.cmake
symbolic/: CMakeLists.txt  CTestTestfile.cmake  assign.hpp  assign_test.cpp  ast.hpp  ast_test  atom.hpp  atom_test.cpp  binaryop.hpp  block.hpp  break.hpp  call.hpp  case.hpp  compile_commands.json  compound.hpp  compound_test.cpp  declare.hpp  default.hpp  dereference.hpp  false.hpp  function.hpp  goto.hpp  identifier.hpp  if.hpp  keyword.hpp  label.hpp  main_test.cpp  node.hpp  node_test.cpp  pragma.hpp  program.hpp  return.hpp  sizeof.hpp  sources.cmake  statement.hpp  statement_test.cpp  true.hpp  type.hpp  type_test.cpp  typedef.hpp  (+3 more)
test/: cuda.h  mp1.cu  mp1.json  mp2.cu  mp2.json  test1.c
tools/: inhier.gv  make_visit_functions.cpp
